# pulse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/pulse/: __init__.py  __main__.py  app.py
src/pulse/data/: config.py  git_collector.py  github_collector.py
src/pulse/widgets/: activity_feed.py  header_bar.py  pr_panel.py  project_card.py  skill_panel.py
tests/: test_git_collector.py
