[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "Project management dashboard — mission control for your portfolio"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pulse = "pulse.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
